membuat halaman FAQ, PrivacyPolicy, Contact, TermsCondition

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artikel | SMAKDA Classroom</title>
+    <title>Contact | SMAKDA Classroom</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js" defer></script>
+    <script src="fontawesome/js/all.min.js"></script>
 
     <link rel="apple-touch-icon" href="img/logo.png">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
@@ -37,7 +37,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html" class="active">Artikel</a></li>
+                        <li><a href="artikel.html">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
                 </nav>
@@ -86,77 +86,43 @@
 
     <main>
 
-        <section class="hero pt-15-vh">
+        <section class="kontak pb-100 pt-15-vh">
             <div class="container">
+                <img src="img/CONTACT_IMAGE.svg" alt="img">
+
                 <div class="caption">
-                    <h1>Increase Your Insights with <span>Our Blog</span></h1>
-                    <p>
-                        Baca Blog dari kami untuk menambah wawasan kamu agar semakin kaya akan pengetahuan.
-                    </p>
-                </div>
-                <div class="img">
-                    <img src="img/artikel/banner.png" alt="img hero">
+                    <h1>Kontak Kami</h1>
+
+                    <form action="">
+
+                        <!-- <div class="form-group">
+                        <label for="nama">Nama Lengkap</label>
+                        <input type="text" id="nama">
+                    </div> -->
+
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="Masukkan email anda...">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="judul">Judul</label>
+                            <input type="text" id="judul" placeholder="Masukkan judul...">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="pesan">Pesan</label>
+                            <textarea name="pesan" id="pesan" cols="30" rows="10"
+                                placeholder="Masukkan pesan anda..."></textarea>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Kirim</button>
+
+                    </form>
                 </div>
             </div>
         </section>
 
-        <section class="series pt-50 pb-100">
-            <div class="container">
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-            </div>
-        </section>
 
         <section class="containerClient pb-100 pt-50">
             <div class="container">
