--- a/detailSeries.html
+++ b/detailSeries.html
@@ -293,7 +293,7 @@
                     <a href="index.html">FAQ</a>
                     <a href="destinasi.html">Blog</a>
                     <a href="destinasi.html">Asset</a>
-                    <a href="kontak.html">Testimonials</a>
+                    <a href="contact.html">Contact</a>
                     <a href="kontak.html">Privacy Policy</a>
                     <a href="kontak.html">Saweria (Donate)</a>
                     <a href="kontak.html">Terms & Condition</a>
