--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artikel | SMAKDA Classroom</title>
+    <title>FAQ | SMAKDA Classroom</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js" defer></script>
+    <script src="fontawesome/js/all.min.js"></script>
 
     <link rel="apple-touch-icon" href="img/logo.png">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="js/script.js" defer></script>
+    <script src="js/faq.js" defer></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html" class="active">Artikel</a></li>
+                        <li><a href="artikel.html">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
                 </nav>
@@ -85,78 +86,80 @@
     </nav>
 
     <main>
-
-        <section class="hero pt-15-vh">
+        <section class="containerFAQ pt-15-vh pb-100">
             <div class="container">
-                <div class="caption">
-                    <h1>Increase Your Insights with <span>Our Blog</span></h1>
+                <div class="title">
+                    <h1>FAQ</h1>
                     <p>
-                        Baca Blog dari kami untuk menambah wawasan kamu agar semakin kaya akan pengetahuan.
+                        Berikut adalah beberapa pertanyaan yang paling sering ditanyakan.
                     </p>
                 </div>
-                <div class="img">
-                    <img src="img/artikel/banner.png" alt="img hero">
+
+                <div class="FAQ pageFAQ">
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Yang ngajar siapa ?</p>
+
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="jawaban">
+                            Untuk setiap series-nya tersendiri, kami mengambil dari Youtube semua. Tapi untuk
+                            konsultasi secara khusus, kami sediakan beberapa kakak kelas yang terbukti
+                            bepengalaman
+                            dibidangnya masing-masing
+                        </div>
+                    </div>
+
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Apakah semuanya gratis ?</p>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="jawaban">
+                            Iya, semua yang ada disini <strong>GRATIS</strong> tidak dipungut biaya sepeserpun, tapi
+                            hanya dapat diakses oleh siswa
+                            jurusan RPL SMKN 2 Purbalingga
+                        </div>
+                    </div>
+
+
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Bagaimana cara saya mengapresiasinya ?</p>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="jawaban">
+                            Kamu hanya cukup belajar yang tekun dan kembangkan bakat kamu, dan <strong>HARUS JUARA
+                                LKS TINGKAT NASIONAL</strong>
+                        </div>
+                    </div>
+
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Ada sosial media ?</p>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="jawaban">
+                            Tentu saja ada, Telegram, Twitter, Facebook, Instagram, Discord
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
 
-        <section class="series pt-50 pb-100">
-            <div class="container">
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-            </div>
-        </section>
 
         <section class="containerClient pb-100 pt-50">
             <div class="container">
