--- a/series.html
+++ b/series.html
@@ -89,7 +89,7 @@
         <section class="hero pt-15-vh">
             <div class="container">
                 <div class="caption">
-                    <h1>Pick The Series As You <span>Like</span></h1>
+                    <h1>Pick The Series <span>As You Like</span></h1>
                     <p>
                         Pilih salah satu, dan pelajari yang ada didalamnya. Jika Anda bingung ingin memulai dari mana,
                         Anda bisa filter lewat <a href="" class="text-primary fw-600">topik</a> atau Anda bisa langsung
@@ -211,7 +211,7 @@
                     <a href="index.html">FAQ</a>
                     <a href="destinasi.html">Blog</a>
                     <a href="destinasi.html">Asset</a>
-                    <a href="kontak.html">Testimonials</a>
+                    <a href="contact.html">Contact</a>
                     <a href="kontak.html">Privacy Policy</a>
                     <a href="kontak.html">Saweria (Donate)</a>
                     <a href="kontak.html">Terms & Condition</a>
