--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artikel | SMAKDA Classroom</title>
+    <title>Privacy Policy | SMAKDA Classroom</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js" defer></script>
+    <script src="fontawesome/js/all.min.js"></script>
 
     <link rel="apple-touch-icon" href="img/logo.png">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="js/script.js" defer></script>
+    <script src="js/faq.js" defer></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html" class="active">Artikel</a></li>
+                        <li><a href="artikel.html">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
                 </nav>
@@ -86,75 +87,99 @@
 
     <main>
 
-        <section class="hero pt-15-vh">
+
+        <section class="PrivacyPolicy pt-15-vh pb-100">
             <div class="container">
-                <div class="caption">
-                    <h1>Increase Your Insights with <span>Our Blog</span></h1>
-                    <p>
-                        Baca Blog dari kami untuk menambah wawasan kamu agar semakin kaya akan pengetahuan.
-                    </p>
-                </div>
-                <div class="img">
-                    <img src="img/artikel/banner.png" alt="img hero">
-                </div>
-            </div>
-        </section>
+                <h1 class="text-center mb-50">Kebijakan Privasi</h1>
 
-        <section class="series pt-50 pb-100">
-            <div class="container">
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
+                <p>
+                    Kebijakan privasi ini mengungkapkan praktik privasi untuk parsinta.com. Kebijakan privasi ini hanya
+                    berlaku untuk informasi yang dikumpulkan oleh situs web ini. Anda akan mengetahuinya setelah anda
+                    membaca semua list berikut:
+                </p>
 
-                <a href="" class="perSeries">
-                    <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
+                <ul>
+                    <li>
+                        Informasi pengenal pribadi apa yang dikumpulkan dari Anda melalui situs web, bagaimana ia
+                        digunakan dan dengan siapa informasi itu dapat dibagikan.
+                    </li>
 
-                <a href="" class="perSeries">
-                    <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
+                    <li>
+                        Pilihan apa yang tersedia untuk Anda sehubungan dengan penggunaan data Anda.
+                    </li>
 
-                <a href="" class="perSeries">
-                    <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
+                    <li>
+                        Prosedur keamanan di tempat untuk melindungi penyalahgunaan informasi Anda.
+                    </li>
 
-                <a href="" class="perSeries">
-                    <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
+                    <li>
+                        Bagaimana Anda dapat memperbaiki ketidak akuratan dalam informasi.
+                    </li>
 
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
+                    <li>
+                        Pengumpulan, Penggunaan, dan Berbagi Informasi
+                    </li>
+                </ul>
+
+                <p>
+                    Kami adalah pemilik tunggal dari informasi yang dikumpulkan di situs ini. Kami hanya memiliki akses
+                    ke / mengumpulkan
+                    informasi yang Anda berikan secara sukarela kepada kami melalui email atau kontak langsung lainnya
+                    dari Anda. Kami tidak
+                    akan menjual atau menyewakan informasi ini kepada siapa pun. Kami tidak akan membagikan informasi
+                    Anda dengan pihak
+                    ketiga mana pun di luar organisasi kami.
+                </p>
+
+                <h2>Keamanan</h2>
+
+                <p>
+                    Kami mengambil tindakan pencegahan untuk melindungi informasi Anda. Ketika Anda mengirimkan
+                    informasi sensitif melalui
+                    situs web, informasi Anda dilindungi baik online maupun offline.
+                </p>
+
+                <p>
+                    Meskipun kami menggunakan enkripsi untuk melindungi informasi sensitif yang dikirimkan secara
+                    online, kami juga
+                    melindungi informasi Anda secara offline. Hanya karyawan yang membutuhkan informasi untuk melakukan
+                    pekerjaan tertentu
+                    (misalnya, penagihan atau layanan pelanggan) diberikan akses ke informasi identitas pribadi.
+                    Komputer / server tempat
+                    kami menyimpan informasi identitas pribadi disimpan dalam lingkungan yang aman.
+                </p>
+
+                <p>
+                    Untuk menggunakan situs web ini, pengguna harus terlebih dahulu melengkapi formulir pendaftaran.
+                    Selama pendaftaran,
+                    pengguna diharuskan memberikan informasi tertentu (seperti nama dan alamat email). Informasi ini
+                    digunakan untuk
+                    menghubungi Anda tentang produk / layanan di situs kami di mana Anda telah menyatakan minat. Sesuai
+                    pilihan Anda, Anda
+                    juga dapat memberikan informasi demografis tentang diri Anda, tetapi itu tidak diwajibkan.
+                </p>
+
+                <h2>Link</h2>
+
+
+                <p>
+                    Situs web ini berisi tautan ke situs lain. Harap perhatikan bahwa kami tidak bertanggung jawab atas
+                    konten atau praktik
+                    privasi dari situs lain tersebut. Kami mendorong pengguna kami untuk berhati-hati ketika mereka
+                    meninggalkan situs kami
+                    dan membaca pernyataan privasi dari situs lain yang mengumpulkan informasi identitas pribadi.
+                </p>
+
+                <h2>Perbaruan</h2>
+
+                <p>
+                    Kebijakan Privasi kami dapat berubah dari waktu ke waktu dan semua pembaruan akan diposting di
+                    halaman ini. Jika Anda
+                    merasa bahwa kami tidak mematuhi kebijakan privasi ini, Anda harus menghubungi kami segera melalui
+                    email di
+                    team@parsinta.com
+
+                </p>
             </div>
         </section>
 
