--- a/TermsCondition.html
+++ b/TermsCondition.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artikel | SMAKDA Classroom</title>
+    <title>Terms & Condition | SMAKDA Classroom</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js" defer></script>
+    <script src="fontawesome/js/all.min.js"></script>
 
     <link rel="apple-touch-icon" href="img/logo.png">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="js/script.js" defer></script>
+    <script src="js/faq.js" defer></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html" class="active">Artikel</a></li>
+                        <li><a href="artikel.html">Artikel</a></li>
                         <li><a href="community.html">Community</a></li>
                     </ul>
                 </nav>
@@ -86,77 +87,105 @@
 
     <main>
 
-        <section class="hero pt-15-vh">
+
+        <section class="TermsCondition pt-15-vh pb-100">
             <div class="container">
-                <div class="caption">
-                    <h1>Increase Your Insights with <span>Our Blog</span></h1>
-                    <p>
-                        Baca Blog dari kami untuk menambah wawasan kamu agar semakin kaya akan pengetahuan.
-                    </p>
-                </div>
-                <div class="img">
-                    <img src="img/artikel/banner.png" alt="img hero">
-                </div>
+                <h1 class="text-center mb-50">Syarat dan Ketentuan</h1>
+                <p>
+                    Dengan mengakses situs web ini, Anda setuju untuk terikat dengan Syarat dan Ketentuan Penggunaan
+                    situs web ini,
+                    semua hukum dan peraturan yang berlaku, dan setuju bahwa Anda bertanggung jawab untuk mematuhi hukum
+                    setempat
+                    yang berlaku. Jika Anda tidak setuju dengan persyaratan ini, Anda dilarang menggunakan atau
+                    mengakses situs ini.
+                </p>
+
+                <h2>Gunakan Lisensi</h2>
+
+
+                <p>
+                    Izin diberikan untuk mengunduh sementara satu salinan materi (informasi atau perangkat lunak) di
+                    situs web
+                    Parsinta hanya untuk dilihat secara pribadi. Ini adalah pemberian lisensi, bukan transfer judul, dan
+                    di bawah
+                    lisensi ini Anda tidak boleh: Daftar sebagai member baik premium maupun yang biasa Ketika Anda
+                    memang ingin
+                    menonton seri video tutorial di parsinta, maka anda harus terlebih dahulu mendaftar menjadi member
+                    di parsinta
+                    termasuk verifikasi email, jadi jika email Anda tidak valid, maka tidak akan bisa mendaftar di
+                    parsinta.
+                </p>
+
+                <p>
+                    Memodifikasi atau menyalin materi Menggunakan bahan untuk tujuan komersial, atau untuk tampilan
+                    publik
+                    (komersial atau non-komersial) Mencoba mendekompilasi atau merekayasa balik perangkat lunak apa pun
+                    yang
+                    terdapat di situs web Parsinta Menghapus semua hak cipta atau nota kepemilikan lainnya dari materi
+                    atau transfer
+                    materi ke orang lain atau menciplak materi pada server lain.
+                </p>
+
+                <h2>Penolakan</h2>
+
+                <p>
+                    Bahan-bahan di situs web Parsinta disediakan sebagaimana adanya. Parsinta tidak membuat jaminan,
+                    tersurat maupun
+                    tersirat, dan dengan ini menolak dan meniadakan semua jaminan lainnya, termasuk tanpa batasan,
+                    jaminan tersirat
+                    atau kondisi yang dapat diperjualbelikan, kesesuaian untuk tujuan tertentu, atau non-pelanggaran hak
+                    kekayaan
+                    intelektual atau pelanggaran hak lainnya.
+                </p>
+
+                <p>
+                    Lebih lanjut, Parsinta tidak menjamin atau membuat pernyataan apa pun mengenai keakuratan,
+                    kemungkinan hasil,
+                    atau keandalan penggunaan materi di situs webnya atau yang terkait dengan materi tersebut atau pada
+                    situs apa
+                    pun yang terkait dengan situs ini.
+                </p>
+
+                <h2>Keterbatasan</h2>
+
+                <p>
+                    Dalam keadaan apa pun Parsinta atau pemasoknya tidak akan bertanggung jawab atas kerusakan apa pun
+                    (termasuk,
+                    tanpa batasan, kerusakan karena hilangnya data atau laba, atau karena gangguan bisnis,) yang timbul
+                    dari
+                    penggunaan atau ketidakmampuan untuk menggunakan materi di situs web Parsinta, bahkan jika
+                    perwakilan resmi
+                    Parsinta atau Parsinta telah diberitahu secara lisan atau tertulis tentang kemungkinan kerusakan
+                    tersebut.
+                </p>
+
+                <p>
+                    Karena beberapa yurisdiksi tidak mengizinkan pembatasan pada jaminan tersirat, atau batasan tanggung
+                    jawab untuk
+                    kerusakan konsekuensial atau insidental, batasan ini mungkin tidak berlaku untuk Anda.
+                </p>
+
+                <h2>Revisi dan Errata</h2>
+
+                <p>
+                    Materi yang muncul di situs web Parsinta dapat mencakup kesalahan teknis, tipografi, atau
+                    fotografi. Parsinta
+                    tidak menjamin bahwa semua materi di situs webnya akurat, lengkap, atau terkini. Parsinta dapat
+                    membuat
+                    perubahan pada materi yang terdapat di situs webnya kapan saja tanpa pemberitahuan.
+                </p>
+
+                <p>
+                    Parsinta tidak membuat komitmen untuk memperbarui materi. Situs Ketentuan Penggunaan Modifikasi
+                    Parsinta dapat
+                    merevisi ketentuan penggunaan ini untuk situs webnya kapan saja tanpa pemberitahuan. Dengan
+                    menggunakan situs
+                    web ini Anda setuju untuk terikat dengan versi Persyaratan dan Ketentuan Penggunaan yang berlaku
+                    saat ini.
+                </p>
             </div>
         </section>
 
-        <section class="series pt-50 pb-100">
-            <div class="container">
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/test-driven-laravel-ysggm.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/realtime-dengan-laravel-echo-pusher-mrbr7.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/rest-api-dengan-laravel-tbz9l.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-
-                <a href="" class="perSeries">
-                    <img src="img/kelas/laravel-inertia-dari-awal-0gjn8.jpg" alt="img series">
-                    <div class="keterangan">
-                        <p>1 week ago</p>
-                        <p>Rifki Romadhan</p>
-                    </div>
-                    <h2>Membangun Forum Dengan TDD</h2>
-                </a>
-            </div>
-        </section>
 
         <section class="containerClient pb-100 pt-50">
             <div class="container">
